...

  // MARK: - Constants

  private let configLibraryTitle = "Configs"
  private let configLibraryNewTitle = "New"
  private let configLibraryImportTitle = "Import…"
  private let configLibraryEditTitle = "Edit"
  private let configLibraryRenameTitle = "Rename"
  private let configLibraryDeleteTitle = "Delete"
  private let configLibraryActionsAccessibilityLabel = "Config actions"
  private let configLibraryRenameSheetTitle = "Rename Config"
  private let configLibraryImportFailureTitle = "Unable to Import Configuration"
  private let configLibraryRenameFieldTitle = "Name"
...
